extends Control





func _on_level_pressed():
	get_tree().change_scene_to_file("res://Level/Level.tscn")


func _on_home_pressed():
	get_tree().change_scene_to_file("res://Awal Game/Awal game.tscn")


func _on_tua_pressed():
	get_tree().change_scene_to_file("res://Level/1907/tamplet4.tscn")


func _on_raden_pressed():
	get_tree().change_scene_to_file("res://Level/1907/salah3.tscn")


func _on_loro_pressed():
	get_tree().change_scene_to_file("res://Level/1907/salah3.tscn")
